<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:filterTouchesWhenObscured="true"
    android:layout_width="match_parent"
    tools:background="@color/white"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_12sdp"
        tools:context="com.paysky.upg.smartboxv2.com.paysky.upg.fragment.PayLinkFragment">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

            <TableRow android:id="@+id/TerminalLL">

                <TextView
                    android:layout_width="wrap_content"

                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:gravity="center|start"
                    android:text="@string/upg_general_TerminalWithoutDot" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_login_background">

                    <Spinner
                        android:id="@+id/TerminalSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_35sdp"
                        android:dropDownVerticalOffset="40dp"
                        android:gravity="start"
                        android:padding="@dimen/_8sdp"
                        android:text="@string/upg_paylink_select_merchant_type_hint" />
                </LinearLayout>

            </TableRow>

            <TableRow
                android:id="@+id/AmoutLL"
                android:layout_marginTop="@dimen/_8sdp">


                <TextView
                    android:layout_width="wrap_content"

                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:gravity="center|start"
                    android:text="@string/upg_general_Amount" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_login_background"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/CurrncyType"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_35sdp"
                        android:dropDownVerticalOffset="40dp"
                        android:gravity="start"
                        android:padding="@dimen/_8sdp"
                        android:text="Please select merchant type" />

                    <io.paysky.paybutton.example.CurrencyEditText
                        android:id="@+id/amount_editText"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_38sdp"
                        android:background="@null"
                        android:hint="@string/upg_general_Amount"
                        android:imeOptions="actionNext"
                        android:paddingEnd="@dimen/_8sdp"
                        android:singleLine="true"
                        android:inputType="numberDecimal"
                        android:textAlignment="viewStart"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="@dimen/_12ssp"
                        app:locale="en_US"
                        tools:text="5555555555"
                        app:showSymbol="false" />

                </LinearLayout>

            </TableRow>


            <TableRow android:layout_marginTop="@dimen/_8sdp">

                <TextView
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:gravity="center|start"
                    android:text="@string/upg_paylink_payer_name_label" />


                <EditText
                    android:id="@+id/PayerName"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_login_background"
                    android:hint="@string/upg_paylink_payer_name_hint"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/expire_date_editText"
                    android:paddingStart="@dimen/_12sdp"
                    android:paddingEnd="@dimen/_12sdp"
                    style="@style/EditStyle"
                    android:singleLine="true"
                    android:textAlignment="viewStart"
                    android:textSize="@dimen/_12ssp" />

            </TableRow>


            <TableRow android:layout_marginTop="@dimen/_8sdp">

                <TextView
                    android:layout_width="wrap_content"

                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:gravity="center|start"
                    android:text="@string/upg_paylink_order_Type_label" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_login_background">

                    <Spinner
                        android:id="@+id/TypeSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_35sdp"
                        android:dropDownVerticalOffset="40dp"
                        android:gravity="start"
                        android:padding="@dimen/_8sdp"
                        android:text="@string/upg_paylink_select_order_type_hint" />
                </LinearLayout>

            </TableRow>


            <TableRow
                android:id="@+id/typeLL"
                android:layout_marginTop="@dimen/_8sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:gravity="center|start"
                    android:text="@string/number_payment_name" />

                <EditText
                    android:id="@+id/NumberPayment"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_login_background"
                    android:hint="@string/upg_paylink_item_number_payment_name_label"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="8"
                    android:maxLines="1"
                    style="@style/EditStyle"
                    android:nextFocusDown="@+id/expire_date_editText"
                    android:paddingStart="@dimen/_12sdp"
                    android:paddingEnd="@dimen/_12sdp"
                    android:singleLine="true"
                    android:textAlignment="viewStart"
                    android:textSize="@dimen/_12ssp" />

            </TableRow>


            <TableRow
                android:id="@+id/ReferenceNumberLL"
                android:layout_marginTop="@dimen/_8sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:gravity="center|start"
                    android:text="@string/upg_paylink_transaction_number_label" />


                <EditText
                    android:id="@+id/refnumber"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_login_background"
                    android:hint="@string/upg_paylink_transaction_number_hint"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="20"
                    android:maxLines="1"
                    style="@style/EditStyle"
                    android:nextFocusDown="@+id/expire_date_editText"
                    android:paddingStart="@dimen/_12sdp"
                    android:paddingEnd="@dimen/_12sdp"
                    android:singleLine="true"
                    android:textAlignment="viewStart"
                    android:textSize="@dimen/_12ssp" />

            </TableRow>


            <TableRow
                android:id="@+id/dataExpLL"

                android:layout_marginTop="@dimen/_8sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:gravity="center|start"
                    android:text="@string/upg_general_Expiration" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"

                    android:layout_weight="1"
                    android:background="@drawable/edit_login_background"
                    android:gravity="center"
                    android:orientation="horizontal">


                    <Button
                        android:filterTouchesWhenObscured="true"
                        android:id="@+id/dataExp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:gravity="start|center_vertical"
                        android:hint="@string/upg_paylink_expiration_date_hint"
                        android:paddingStart="@dimen/_12sdp"
                        android:textColor="@color/blue100"
                        android:textColorHint="@color/blue100"
                        android:textSize="@dimen/_12ssp" />

                </LinearLayout>
            </TableRow>


            <TableRow
                android:id="@+id/LLnoti"

                android:layout_marginTop="@dimen/_8sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:gravity="center|start"
                    android:text="@string/upg_general_Notification" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_login_background"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/NotiType"
                        android:layout_width="115dp"
                        android:layout_height="match_parent"
                        android:dropDownVerticalOffset="40dp"
                        android:gravity="start"
                        android:padding="@dimen/_8sdp" />

                    <EditText
                        android:id="@+id/notification"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/upg_general_Notification"
                        android:imeOptions="actionNext"
                        android:maxLength="25"
                        android:maxLines="1"
                        android:textSize="@dimen/_11ssp"
                        android:textColorHint="@color/black"
                        android:textColor="@color/black"
                        android:singleLine="true" />

                </LinearLayout>
            </TableRow>


            <TableRow
                tools:visibility="visible"
                android:layout_marginTop="@dimen/_8sdp"
                android:visibility="gone"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:gravity="center|start"
                    android:text="@string/image" />

                <LinearLayout
                    android:id="@+id/select_image_LL"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_weight="1"

                    android:background="@drawable/edit_login_background"
                    android:gravity="center"
                    android:orientation="horizontal">


                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/tv_selectedimage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLength="10"
                        android:text="@string/upg_general_choose"
                        android:textColor="@color/blue100" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <ImageView
                        android:id="@+id/succesimage"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="@dimen/_12sdp"
                        android:visibility="visible"
                        app:srcCompat="@drawable/ic_delete_card"
                        app:tint="@color/blue100" />


                </LinearLayout>
            </TableRow>
        </TableLayout>


        <LinearLayout
            android:id="@+id/genratePayLink"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:padding="@dimen/_7sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/btn_background"
            android:gravity="center">

            <Button
                android:filterTouchesWhenObscured="true"
                android:id="@+id/btnG"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/upg_paylink_send_PayLink_btn"
                android:textColor="@color/white" />

            <ImageView
                android:layout_width="@dimen/_18sdp"
                android:layout_height="@dimen/_18sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:scaleX="@integer/one"
                app:tint="@color/white"
                app:srcCompat="@drawable/ic_double_arrow" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/generate_history_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:gravity="center"
            android:padding="@dimen/_8sdp">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_history_white_24dp"
                android:tint="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:gravity="center"
                android:text="@string/upg_general_history" />
        </LinearLayout>


    </LinearLayout>


</ScrollView>